<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidElementNotAllowed -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:layout="@layout/layout_preference_category_first"
        android:title="@string/title_account">
        <ListPreference
            android:icon="@drawable/ic_round_account_circle"
            android:key="switch_account"
            android:title="@string/title_switch_account" />
        <Preference
            android:icon="@drawable/ic_round_add_circle_green"
            android:title="@string/title_new_account"
            android:summary="@string/tip_account_error">
            <intent
                android:targetPackage="top.goforce.tieba.post"
                android:targetClass="com.huanchengfly.tieba.post.activities.LoginActivity"
                android:action="android.intent.action.VIEW" />
        </Preference>
        <Preference
            android:icon="@drawable/ic_close_circle_red"
            android:key="exit_account"
            android:title="@string/title_exit_account" />
        <Preference
            android:icon="@drawable/ic_document_green"
            android:key="copy_bduss"
            android:title="@string/title_copy_bduss"
            android:summary="@string/summary_copy_bduss" />
        <EditTextPreference
            android:icon="@drawable/ic_round_more_blue"
            android:key="little_tail"
            android:title="@string/title_my_tail" />
        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_block_settings">
        <Preference
            android:icon="@drawable/ic_round_remove_circle"
            android:key="black_list"
            android:title="@string/title_black_list" />
        <Preference
            android:icon="@drawable/ic_round_check_circle"
            android:key="white_list"
            android:title="@string/title_white_list" />
        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_settings_read_habit">

        <ListPreference
            android:icon="@drawable/ic_round_photo_size_select_actual"
            android:key="image_load_type"
            android:entries="@array/image_load_type_entries"
            android:entryValues="@array/image_load_type_entry_values"
            android:defaultValue="0"
            android:title="@string/title_settings_image_load_type" />

        <ListPreference
            android:entries="@array/sort_type_entries"
            android:entryValues="@array/sort_type_entry_values"
            android:title="@string/title_settings_default_sort_type"
            android:summaryOff="@string/summary_default_sort_type"
            android:defaultValue="0"
            android:key="default_sort_type"
            android:icon="@drawable/ic_round_calendar_view_day" />

        <SwitchPreference
            android:icon="@drawable/ic_quick_yellow"
            android:defaultValue="true"
            android:key="showShortcutInThread"
            android:title="@string/settings_show_shortcut"
            android:summaryOff="@string/tip_show_shortcut_in_thread"
            android:summaryOn="@string/tip_show_shortcut_in_thread_on" />

        <SwitchPreference
            android:icon="@drawable/ic_round_star_yellow"
            android:defaultValue="true"
            android:key="collect_thread_see_lz"
            android:title="@string/settings_collect_thread_see_lz"
            android:summaryOff="@string/tip_collect_thread_see_lz"
            android:summaryOn="@string/tip_collect_thread_see_lz_on" />

        <SwitchPreference
            android:icon="@drawable/ic_arrow_dropup_circle"
            android:defaultValue="true"
            android:key="show_top_forum_in_normal_list"
            android:title="@string/title_settings_show_top_forum_in_normal_list"
            android:summary="@string/summary_show_top_forum_in_normal_list" />

        <SwitchPreference
            android:icon="@drawable/ic_round_verified"
            android:defaultValue="false"
            android:key="show_both_username_and_nickname"
            android:title="@string/title_show_both_username_and_nickname" />

        <SwitchPreference
            android:icon="@drawable/ic_round_hourglass_full"
            android:defaultValue="true"
            android:key="loadPictureWhenScroll"
            android:title="@string/title_load_picture_when_scroll" />

        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_settings_custom">
        <ListPreference
            android:icon="@drawable/ic_round_brightness_2_green"
            android:key="dark_theme"
            android:entries="@array/dark_theme_names"
            android:entryValues="@array/dark_theme_values"
            android:defaultValue="dark"
            android:title="@string/settings_night_mode" />

        <SwitchPreference
            android:icon="@drawable/ic_round_brightness_auto"
            android:defaultValue="true"
            android:key="follow_system_night"
            android:title="@string/title_settings_follow_system_night" />

        <SwitchPreference
            android:icon="@drawable/ic_beaker"
            android:defaultValue="true"
            android:key="status_bar_darker"
            android:title="@string/settings_status_bar_darker"
            android:summary="@string/tip_status_bar_darker" />

        <SwitchPreference
            android:icon="@drawable/ic_forum_single_blue"
            android:key="listSingle"
            android:defaultValue="false"
            android:title="@string/settings_forum_single" />

        <SwitchPreference
            android:icon="@drawable/ic_round_explore"
            android:defaultValue="false"
            android:key="hideExplore"
            android:title="@string/title_hide_explore" />

        <SwitchPreference
            android:icon="@drawable/ic_round_outlet"
            android:defaultValue="false"
            android:key="level_icon_old_style"
            android:title="@string/title_level_old_style" />

        <androidx.preference.SeekBarPreference
            android:icon="@drawable/ic_round_rounded_corner"
            app:min="0"
            android:max="16"
            app:showSeekBarValue="true"
            android:defaultValue="8"
            android:key="radius"
            android:title="@string/title_preference_radius" />

        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_auto_sign">
        <SwitchPreference
            android:icon="@drawable/ic_round_offline_pin_blue"
            android:summaryOn="@string/summary_auto_sign_on"
            android:summaryOff="@string/summary_auto_sign"
            android:defaultValue="false"
            android:key="auto_sign"
            android:title="@string/title_auto_sign" />

        <com.huanchengfly.tieba.post.components.prefs.TimePickerPreference
            android:dependency="auto_sign"
            android:icon="@drawable/ic_round_watch_later_purple"
            android:key="auto_sign_time"
            android:title="@string/title_auto_sign_time"
            android:defaultValue="09:00" />

        <Preference
            android:layout="@layout/layout_preference_dense"
            android:summary="@string/tip_auto_sign" />

        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/title_settings_about">
        <SwitchPreference
            android:icon="@drawable/ic_round_bug_report_blue"
            android:defaultValue="false"
            android:key="check_beta_update"
            android:title="@string/title_check_beta_update"
            android:summary="@string/tip_check_beta_update" />

        <SwitchPreference
            android:icon="@drawable/ic_chrome"
            android:defaultValue="true"
            android:key="use_webview"
            android:title="@string/title_use_webview"
            android:summaryOn="@string/tip_use_webview_on"
            android:summaryOff="@string/tip_use_webview" />

        <SwitchPreference
            android:icon="@drawable/ic_today"
            android:defaultValue="true"
            android:key="use_custom_tabs"
            android:title="@string/title_use_custom_tabs"
            android:summaryOn="@string/tip_use_custom_tab_on"
            android:summaryOff="@string/tip_use_custom_tab" />

        <Preference
            android:icon="@drawable/ic_round_offline_bolt_green"
            android:key="clear_cache"
            android:title="@string/title_clear_cache" />

        <Preference
            android:icon="@drawable/ic_round_how_to_vote"
            android:key="clear_search_history"
            android:title="@string/title_clear_search_history" />

        <Preference
            android:key="about"
            android:icon="@drawable/ic_round_info"
            android:title="@string/title_about">
            <intent
                android:targetPackage="top.goforce.tieba.post"
                android:targetClass="com.huanchengfly.tieba.post.activities.AboutActivity"
                android:action="android.intent.action.VIEW" />
        </Preference>

        <Preference
            android:enabled="false"
            android:layout="@layout/layout_preference_bottom" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>