<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:title="@string/title_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="1"
        android:title="@string/title_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_send_to_desktop"
        android:orderInCategory="2"
        android:title="@string/title_send_to_desktop"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_unfollow"
        android:orderInCategory="3"
        android:title="@string/title_unfollow"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_forum_info"
        android:orderInCategory="4"
        android:title="@string/title_forum_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="5"
        android:title="@string/title_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="6"
        android:title="@string/sidebar_exit"
        app:showAsAction="never" />
</menu>