<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_block"
        android:icon="@drawable/ic_round_remove_circle_outline"
        android:orderInCategory="0"
        android:title="@string/title_block"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_block_black"
                android:title="@string/title_add_black" />
            <item
                android:id="@+id/menu_block_white"
                android:title="@string/title_add_white" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_edit_info"
        android:orderInCategory="1"
        android:title="@string/menu_edit_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="2"
        android:title="@string/sidebar_exit"
        app:showAsAction="never" />
</menu>