<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:layout="@layout/layout_preference_category_no_title">
        <Preference
            android:key="theme_select"
            android:layout="@layout/layout_preference"
            android:icon="@drawable/ic_round_format_paint_red"
            android:title="@string/title_select_theme">
            <intent android:targetPackage="com.huanchengfly.tieba.post" android:targetClass="com.huanchengfly.tieba.post.activities.ThemeActivity" android:action="android.intent.action.VIEW" />
        </Preference>

        <ListPreference
            android:icon="@drawable/ic_round_brightness_2_green"
            android:key="dark_theme"
            android:entries="@array/dark_theme_names"
            android:entryValues="@array/dark_theme_values"
            android:defaultValue="dark"
            android:title="@string/settings_night_mode" />

        <SwitchPreference
            android:icon="@drawable/ic_round_brightness_auto"
            android:defaultValue="true"
            android:key="follow_system_night"
            android:title="@string/title_settings_follow_system_night" />

        <SwitchPreference
            android:icon="@drawable/ic_beaker"
            android:defaultValue="true"
            android:key="status_bar_darker"
            android:title="@string/settings_status_bar_darker"
            android:summary="@string/tip_status_bar_darker" />

        <SwitchPreference
            android:icon="@drawable/ic_forum_single_blue"
            android:key="listSingle"
            android:defaultValue="false"
            android:title="@string/settings_forum_single" />

        <SwitchPreference
            android:icon="@drawable/ic_round_explore"
            android:defaultValue="false"
            android:key="hideExplore"
            android:title="@string/title_hide_explore" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="level_icon_old_style"
            android:title="@string/title_level_old_style" />

        <androidx.preference.SeekBarPreference
            app:min="0"
            android:max="16"
            app:showSeekBarValue="true"
            android:defaultValue="8"
            android:key="radius"
            android:title="@string/title_preference_radius" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>